# tensortrax

./: .all-contributorsrc  .flake8  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: coverage.yml  publish-to-pypi.yml  upload-codecov.yml
docs/: conf.py  index.rst  knowledge.rst  tensortrax.rst
docs/benchmark/: benchmark.py  benchmark_tensortrax_vs_autograd.py  benchmark_tensortrax_vs_autograd_vs_jax.py
docs/knowledge/: derivative.rst  tensor.rst
docs/tensortrax/: evaluate.rst  math.rst  tensor.rst
docs/tensortrax/math/: linalg.rst  special.rst
examples/: README.rst  ex01_usage.py  ex02_numeric_variation.py  ex03_custom_extension.py
src/tensortrax/: __about__.py  __init__.py  _evaluate.py  _helpers.py  _tensor.py
src/tensortrax/math/: __init__.py  _linalg.py  _math_array.py  _math_tensor.py  _special.py
src/tensortrax/math/_linalg/: __init__.py  _linalg_array.py  _linalg_tensor.py
src/tensortrax/math/_special/: __init__.py  _special_tensor.py
src/tensortrax/math/linalg/: __init__.py  _linalg_array.py  _linalg_tensor.py
src/tensortrax/math/special/: __init__.py  _special_tensor.py
tensortrax/: __about__.py  __init__.py  _evaluate.py  _helpers.py  _tensor.py
tensortrax/math/: __init__.py  _array.py  _math_array.py  _math_tensor.py  _tensor.py
tensortrax/math/_linalg/: __init__.py  _linalg_array.py  _linalg_tensor.py
tensortrax/math/_special/: __init__.py  _special_tensor.py
tests/: concept.py  test_dual2real.py  test_external.py  test_hessian.py  test_hessian_2.py  test_hessian_vector_product.py  test_jacobian.py  test_math.py  test_misc.py  test_mixed_partials.py  test_new.py  test_scalar.py  test_take.py
